remove bitcoin hash from chainstate
