# emily/handler/src/api/models/chainstate.rs
@@ -24,8 +24,6 @@ pub struct Chainstate {
     pub stacks_block_height: u64,
     /// Stacks block hash at the height.
     pub stacks_block_hash: String,
-    /// Bitcoin block hash.
-    pub bitcoin_block_hash: String,
     /// Bitcoin block height
     pub bitcoin_block_height: u64,
 }
