# emily/openapi-gen/generated-specs/testing-emily-openapi-spec.json
@@ -2433,14 +2433,9 @@
         "required": [
           "stacksBlockHeight",
           "stacksBlockHash",
-          "bitcoinBlockHash",
           "bitcoinBlockHeight"
         ],
         "properties": {
-          "bitcoinBlockHash": {
-            "type": "string",
-            "description": "Bitcoin block hash."
-          },
           "bitcoinBlockHeight": {
             "type": "integer",
             "format": "int64",
